tests/baselines/reference/classImplementsClass4.errors.txt
tests/cases/compiler/classImplementsClass4.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'A'.
  Property 'x' is missing in type 'C'.
tests/cases/compiler/classImplementsClass4.ts(16,1): error TS2322: Type 'C' is not assignable to type 'C2'.
  Property 'x' is missing in type 'C'.


==== tests/cases/compiler/classImplementsClass4.ts (2 errors) ====
    class A {
        private x = 1;
        foo(): number { return 1; }
    }
    class C implements A {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'A'.
!!! error TS2420:   Property 'x' is missing in type 'C'.
        foo() {
            return 1;
        }
    }
    
    class C2 extends A {}
    
    var c: C;
    var c2: C2;
    c = c2;
    c2 = c;
    ~~
!!! error TS2322: Type 'C' is not assignable to type 'C2'.
!!! error TS2322:   Property 'x' is missing in type 'C'.